<resources>
    <string name="app_name">StevTourGuideV5</string>
    <string name="stevenson_ntour_guide">Stevenson\nTour Guide</string>
    <string name="tap_here_to_enter">TAP HERE TO ENTER</string>
    <string name="todo1">TODO</string>
    <string name="greetings_and_welcome_to_stevenson_tour_guide">Greetings!\nAnd welcome to Stevenson Tour Guide!</string>
    <string name="my_name_is_eldon_stevenson_jr_and_ill_be_your_tour_guide_today">My name is Eldon Stevenson Jr. and I\'ll be your tour guide today!</string>
    <string name="i_realize">I realize my building can be very difficult to navigate, but don\'t fret!\nI\'m here to help!</string>
    <string name="how_can">How can I help you today?</string>
    <string name="todo3">TODO</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="find_a_room">Find A Room</string>
    <string name="tour_guide_mode">Tour Guide Mode</string>
    <string name="lecture_hall_nentrance">LECTURE HALL\nENTRANCE</string>
    <string name="tour_guide_mode_allows">Tour Guide Mode allows you to take a tour of all of Stevenson\'s buildings.</string>
    <string name="select_a">Select a starting location.</string>
    <string name="todo4">TODO</string>
    <string name="outside_lec_hall">You\'re outside the lecture halls?\nGreat! Let\'s get started!\nProceed through the doors ahead.</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="you_have">You have now entered Building 4\n(the Lecture Halls).</string>
    <string name="left_4309">To your left is Room 4309.</string>
    <string name="right_4327">To your right is Room 4327.</string>
    <string name="if_you_are">If you\'re in a lab science like\nChemistry, Geology, Physics, etc.\nyour class will probably be in\none of these 2 rooms.</string>
    <string name="lets_head">Let\'s head down this staircase\nto your left.</string>
    <string name="still_4309">In front of you is still Room 4309,\none of the rooms we saw upstairs.</string>
    <string name="so_big">The lecture halls are so large\nthat they take up 2 floors.</string>
    <string name="right_of_4309">To the right of that is\nthe lower level of Room 4327.</string>
    <string name="pass_staircase">If you walk pass the staircase,\nyou\'ll eventually enter\nBuilding 1 (the Math Building).</string>
    <string name="for_now_though">For now though, let\'s this way,\ntoward the AED sign.</string>
    <string name="left_to_library">If you walk down this hallway,\nyou\'ll eventually enter\nBuilding 3 (the Library).</string>
    <string name="start_room">Start Room</string>
    <string name="start_room">Start Room</string>
    <string name="end_room">End Room</string>
</resources>
